--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
+lib_deps = 
+	zinggjm/GxEPD2@^1.5.2
+	adafruit/Adafruit GFX Library@^1.11.5
